--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: "com.android.library"
 
-def DEFAULT_COMPILE_SDK_VERSION = 26
-def DEFAULT_BUILD_TOOLS_VERSION = "26.0.3"
-def DEFAULT_TARGET_SDK_VERSION = 26
-def DEFAULT_MIN_SDK_VERSION = 16
+def DEFAULT_COMPILE_SDK_VERSION = 33
+def DEFAULT_BUILD_TOOLS_VERSION = "33.0.0"
+def DEFAULT_TARGET_SDK_VERSION = 33
+def DEFAULT_MIN_SDK_VERSION = 21
 
 android {
+    namespace = 'com.microsoft.codepush.react'
+
     compileSdkVersion rootProject.hasProperty('compileSdkVersion') ? rootProject.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
     buildToolsVersion rootProject.hasProperty('buildToolsVersion') ? rootProject.buildToolsVersion : DEFAULT_BUILD_TOOLS_VERSION
 
